BelCogo_JoaoAccorsi-Ex1GB/SyntacticAnalyserParser.java
// Generated from SyntacticAnalyser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SyntacticAnalyserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, NEWLINE=5, RESERVED_WORD_MAIN=6, RESERVED_WORD_VOID_TYPE=7, 
		RESERVED_WORD_CLASS=8, RESERVED_WORD_RETURN=9, RESERVED_WORD_IF=10, RESERVED_WORD_ELSE=11, 
		RESERVED_WORD_WHILE=12, PARENTHESIS_OPEN=13, PARENTHESIS_CLOSE=14, CURLY_BRACES_OPEN=15, 
		CURLY_BRACES_CLOSE=16, COMMA=17, SEMICOLON=18, NUMBER=19, IDENTIFIER=20, 
		ATTRIBUITION_OPERATOR=21, LOGIC_OPERATOR=22, ARITMETIC_OPERATOR=23, RELATIONAL_OPERATOR=24;
	public static final int
		RULE_type = 0, RULE_method_type = 1, RULE_boolean_constants = 2, RULE_exp_two = 3, 
		RULE_exp_one = 4, RULE_attr_declaration = 5, RULE_arguments = 6, RULE_main_function = 7, 
		RULE_method_declaration = 8, RULE_while_command = 9, RULE_class = 10, 
		RULE_if = 11, RULE_else = 12, RULE_ifelse = 13, RULE_commands = 14, RULE_exp_three = 15, 
		RULE_aritmetic_op = 16, RULE_exp_four = 17, RULE_logic_op = 18, RULE_relational_op = 19, 
		RULE_prog = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "method_type", "boolean_constants", "exp_two", "exp_one", "attr_declaration", 
			"arguments", "main_function", "method_declaration", "while_command", 
			"class", "if", "else", "ifelse", "commands", "exp_three", "aritmetic_op", 
			"exp_four", "logic_op", "relational_op", "prog"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bool'", "'int'", "'True'", "'False'", null, "'main'", "'void'", 
			"'class'", "'return'", "'if'", "'else'", "'while'", "'('", "')'", "'{'", 
			"'}'", "','", "';'", null, null, "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "NEWLINE", "RESERVED_WORD_MAIN", "RESERVED_WORD_VOID_TYPE", 
			"RESERVED_WORD_CLASS", "RESERVED_WORD_RETURN", "RESERVED_WORD_IF", "RESERVED_WORD_ELSE", 
			"RESERVED_WORD_WHILE", "PARENTHESIS_OPEN", "PARENTHESIS_CLOSE", "CURLY_BRACES_OPEN", 
			"CURLY_BRACES_CLOSE", "COMMA", "SEMICOLON", "NUMBER", "IDENTIFIER", "ATTRIBUITION_OPERATOR", 
			"LOGIC_OPERATOR", "ARITMETIC_OPERATOR", "RELATIONAL_OPERATOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SyntacticAnalyser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SyntacticAnalyserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Method_typeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RESERVED_WORD_VOID_TYPE() { return getToken(SyntacticAnalyserParser.RESERVED_WORD_VOID_TYPE, 0); }
		public Method_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterMethod_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitMethod_type(this);
		}
	}

	public final Method_typeContext method_type() throws RecognitionException {
		Method_typeContext _localctx = new Method_typeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_method_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
				{
				setState(44);
				type();
				}
				break;
			case RESERVED_WORD_VOID_TYPE:
				{
				setState(45);
				match(RESERVED_WORD_VOID_TYPE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Boolean_constantsContext extends ParserRuleContext {
		public Boolean_constantsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_constants; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterBoolean_constants(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitBoolean_constants(this);
		}
	}

	public final Boolean_constantsContext boolean_constants() throws RecognitionException {
		Boolean_constantsContext _localctx = new Boolean_constantsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_boolean_constants);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_twoContext extends ParserRuleContext {
		public Aritmetic_opContext aritmetic_op() {
			return getRuleContext(Aritmetic_opContext.class,0);
		}
		public Logic_opContext logic_op() {
			return getRuleContext(Logic_opContext.class,0);
		}
		public Relational_opContext relational_op() {
			return getRuleContext(Relational_opContext.class,0);
		}
		public Exp_threeContext exp_three() {
			return getRuleContext(Exp_threeContext.class,0);
		}
		public Exp_fourContext exp_four() {
			return getRuleContext(Exp_fourContext.class,0);
		}
		public Exp_twoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_two; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterExp_two(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitExp_two(this);
		}
	}

	public final Exp_twoContext exp_two() throws RecognitionException {
		Exp_twoContext _localctx = new Exp_twoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exp_two);
		try {
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				aritmetic_op();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				logic_op();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				relational_op();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				exp_three();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				exp_four();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exp_oneContext extends ParserRuleContext {
		public TerminalNode ATTRIBUITION_OPERATOR() { return getToken(SyntacticAnalyserParser.ATTRIBUITION_OPERATOR, 0); }
		public Exp_twoContext exp_two() {
			return getRuleContext(Exp_twoContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SyntacticAnalyserParser.SEMICOLON, 0); }
		public Exp_oneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp_one; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterExp_one(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitExp_one(this);
		}
	}

	public final Exp_oneContext exp_one() throws RecognitionException {
		Exp_oneContext _localctx = new Exp_oneContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exp_one);
		try {
			setState(62);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ATTRIBUITION_OPERATOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				match(ATTRIBUITION_OPERATOR);
				setState(58);
				exp_two();
				setState(59);
				match(SEMICOLON);
				}
				break;
			case SEMICOLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_declarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SyntacticAnalyserParser.IDENTIFIER, 0); }
		public Exp_oneContext exp_one() {
			return getRuleContext(Exp_oneContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SyntacticAnalyserParser.SEMICOLON, 0); }
		public Attr_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterAttr_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitAttr_declaration(this);
		}
	}

	public final Attr_declarationContext attr_declaration() throws RecognitionException {
		Attr_declarationContext _localctx = new Attr_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_attr_declaration);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				type();
				setState(65);
				match(IDENTIFIER);
				setState(66);
				exp_one();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				type();
				setState(69);
				match(IDENTIFIER);
				setState(70);
				match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				type();
				setState(73);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public Attr_declarationContext attr_declaration() {
			return getRuleContext(Attr_declarationContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SyntacticAnalyserParser.COMMA, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitArguments(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arguments);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				attr_declaration();
				setState(78);
				match(COMMA);
				setState(79);
				arguments();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				attr_declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_functionContext extends ParserRuleContext {
		public TerminalNode RESERVED_WORD_VOID_TYPE() { return getToken(SyntacticAnalyserParser.RESERVED_WORD_VOID_TYPE, 0); }
		public TerminalNode RESERVED_WORD_MAIN() { return getToken(SyntacticAnalyserParser.RESERVED_WORD_MAIN, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode CURLY_BRACES_OPEN() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_OPEN, 0); }
		public TerminalNode CURLY_BRACES_CLOSE() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_CLOSE, 0); }
		public List<Method_declarationContext> method_declaration() {
			return getRuleContexts(Method_declarationContext.class);
		}
		public Method_declarationContext method_declaration(int i) {
			return getRuleContext(Method_declarationContext.class,i);
		}
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public List<IfelseContext> ifelse() {
			return getRuleContexts(IfelseContext.class);
		}
		public IfelseContext ifelse(int i) {
			return getRuleContext(IfelseContext.class,i);
		}
		public List<While_commandContext> while_command() {
			return getRuleContexts(While_commandContext.class);
		}
		public While_commandContext while_command(int i) {
			return getRuleContext(While_commandContext.class,i);
		}
		public Main_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterMain_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitMain_function(this);
		}
	}

	public final Main_functionContext main_function() throws RecognitionException {
		Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_main_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(RESERVED_WORD_VOID_TYPE);
			setState(85);
			match(RESERVED_WORD_MAIN);
			setState(86);
			match(PARENTHESIS_OPEN);
			setState(87);
			match(PARENTHESIS_CLOSE);
			setState(88);
			match(CURLY_BRACES_OPEN);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1054342L) != 0)) {
				{
				setState(93);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(89);
					method_declaration();
					}
					break;
				case 2:
					{
					setState(90);
					commands();
					}
					break;
				case 3:
					{
					setState(91);
					ifelse();
					}
					break;
				case 4:
					{
					setState(92);
					while_command();
					}
					break;
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(CURLY_BRACES_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Method_declarationContext extends ParserRuleContext {
		public Method_typeContext method_type() {
			return getRuleContext(Method_typeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SyntacticAnalyserParser.IDENTIFIER, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode CURLY_BRACES_OPEN() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_OPEN, 0); }
		public TerminalNode CURLY_BRACES_CLOSE() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_CLOSE, 0); }
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public List<IfelseContext> ifelse() {
			return getRuleContexts(IfelseContext.class);
		}
		public IfelseContext ifelse(int i) {
			return getRuleContext(IfelseContext.class,i);
		}
		public List<While_commandContext> while_command() {
			return getRuleContexts(While_commandContext.class);
		}
		public While_commandContext while_command(int i) {
			return getRuleContext(While_commandContext.class,i);
		}
		public Method_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterMethod_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitMethod_declaration(this);
		}
	}

	public final Method_declarationContext method_declaration() throws RecognitionException {
		Method_declarationContext _localctx = new Method_declarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_method_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			method_type();
			setState(101);
			match(IDENTIFIER);
			setState(102);
			match(PARENTHESIS_OPEN);
			setState(103);
			arguments();
			setState(104);
			match(PARENTHESIS_CLOSE);
			setState(105);
			match(CURLY_BRACES_OPEN);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1054214L) != 0)) {
				{
				setState(109);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case RESERVED_WORD_RETURN:
				case IDENTIFIER:
					{
					setState(106);
					commands();
					}
					break;
				case RESERVED_WORD_IF:
					{
					setState(107);
					ifelse();
					}
					break;
				case RESERVED_WORD_WHILE:
					{
					setState(108);
					while_command();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(CURLY_BRACES_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class While_commandContext extends ParserRuleContext {
		public TerminalNode RESERVED_WORD_WHILE() { return getToken(SyntacticAnalyserParser.RESERVED_WORD_WHILE, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode CURLY_BRACES_OPEN() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_OPEN, 0); }
		public TerminalNode CURLY_BRACES_CLOSE() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_CLOSE, 0); }
		public Logic_opContext logic_op() {
			return getRuleContext(Logic_opContext.class,0);
		}
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public List<IfelseContext> ifelse() {
			return getRuleContexts(IfelseContext.class);
		}
		public IfelseContext ifelse(int i) {
			return getRuleContext(IfelseContext.class,i);
		}
		public List<While_commandContext> while_command() {
			return getRuleContexts(While_commandContext.class);
		}
		public While_commandContext while_command(int i) {
			return getRuleContext(While_commandContext.class,i);
		}
		public While_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterWhile_command(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitWhile_command(this);
		}
	}

	public final While_commandContext while_command() throws RecognitionException {
		While_commandContext _localctx = new While_commandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_while_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(RESERVED_WORD_WHILE);
			setState(117);
			match(PARENTHESIS_OPEN);
			{
			setState(118);
			logic_op();
			}
			setState(119);
			match(PARENTHESIS_CLOSE);
			setState(120);
			match(CURLY_BRACES_OPEN);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1054214L) != 0)) {
				{
				setState(124);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case T__1:
				case RESERVED_WORD_RETURN:
				case IDENTIFIER:
					{
					setState(121);
					commands();
					}
					break;
				case RESERVED_WORD_IF:
					{
					setState(122);
					ifelse();
					}
					break;
				case RESERVED_WORD_WHILE:
					{
					setState(123);
					while_command();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(CURLY_BRACES_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
